<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/datePickerGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="datePicker,btnNext,btnCancel" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="@+id/datePicker"
            app:layout_constraintTop_toBottomOf="@+id/datePicker" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/btnNext"
            app:layout_constraintTop_toBottomOf="@+id/datePicker" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/timePickerGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="timePicker,btnDone,btnBack" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDone"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            app:layout_constraintEnd_toEndOf="@+id/timePicker"
            app:layout_constraintTop_toBottomOf="@+id/timePicker" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/back"
            app:layout_constraintEnd_toStartOf="@+id/btnDone"
            app:layout_constraintTop_toBottomOf="@+id/timePicker" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
